[package]
name = "recorder"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]

[lib]
name = "recorder"
path = "src/lib/recorder.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
arguments = "*"
database = "*"
hiredis = "*"
log = "*"
mcpat = { version = "*", features = ["caching"] }
