[package]
name = "recorder"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]

[lib]
name = "recorder"
path = "src/lib/recorder.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
arguments = "*"
hiredis = "*"
log = "*"
mcpat = { version = "*", features = ["caching"] }
sql = { git = "https://github.com/stainless-steel/sql.git" }
sqlite = "*"
